--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,13 @@
     <groupId>commons-codec</groupId>
     <artifactId>commons-codec</artifactId>
     <version>1.10</version>
+    
 </dependency>
-
+<dependency>
+    <groupId>com.fasterxml.jackson.datatype</groupId>
+    <artifactId>jackson-datatype-jsr310</artifactId>
+    <version>2.8.6</version>
+</dependency>
 	</dependencies>
 
 	<build>
