--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,11 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.8.6</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-java8</artifactId>
+			<version>5.0.12.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
